# void_wx_rs

./: Cargo.toml  config.yaml  preamble.json
src/: log.rs  main.rs
src/agent/: mod.rs  ollama.rs
src/app/: account.rs  mod.rs  redis_util.rs  snipe.rs  wx_response.rs
src/controller/: cn.rs  mod.rs  wx.rs
src/wx_api/: access_token.rs
