[package]
name = "void_wx_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
axum = { version = "0.7.7", features = ["json", "multipart", "tokio", "ws", "form", "original-uri", "query" ] }
axum-xml-up = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
serde_yml = "0.0.12"
serde-xml-rs = "0.6.0"
reqwest = { version = "0.12.8", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
redis = { version = "0", features = ["serde", "serde_json", "tokio", "futures", "futures-util"] }
urlencoding = "2.1.3"
rust-crypto = "0.2.36"