[package]
name = "void_wx_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
axum = { version = "0.8.9", features = [
    "json",
    "multipart",
    "tokio",
    "original-uri",
    "query",
] }
axum-serde = { version = "0.10.0", features = ["full", "xml_encoding"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = "0.0.13"
serde-xml-rs = "0.8.2"
reqwest = { version = "0.13.4", features = ["json"] }
chrono = { version = "0.4.45", features = ["serde"] }
redis = { version = "1.2.4", features = ["tokio-rustls-comp"] }
urlencoding = "2.1.3"
rust-crypto = "0.2.36"
void_log = "0.1.2"
rig = { version = "0.39.0", features = ["derive"] }
rig-derive = "0.39.0"
dashmap = { version = "6.2.1", features = ["raw-api", "serde"] }
